--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <manifest xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <application>
 
         <activity android:name=".activities.SplashActivity"
@@ -29,6 +34,30 @@
             android:exported="true"
             android:theme="@style/Theme.MediAssist.NoActionBar" />
         <activity android:name=".activities.Auth.SignUpActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MediAssist.NoActionBar" />
+        <activity android:name=".activities.Auth.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MediAssist.NoActionBar" />
+        <activity android:name=".activities.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MediAssist.NoActionBar" />
+        <activity android:name=".activities.ProfileActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MediAssist.NoActionBar" />
+        <activity android:name=".activities.EmergencyActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MediAssist.NoActionBar" />
+        <activity android:name=".activities.MedicationActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MediAssist.NoActionBar" />
+        <activity android:name=".activities.AppointmentsActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MediAssist.NoActionBar" />
+        <activity android:name=".activities.PrescriptionsActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MediAssist.NoActionBar" />
+        <activity android:name=".activities.ScheduleActivity"
             android:exported="true"
             android:theme="@style/Theme.MediAssist.NoActionBar" />
     </application>
